---------------------------------------------------------------------------------------------------
Version: 1.7.1
Date: 1X. 3. 2019
  Changes:
    - Factorio Standard Library is no longer directly bundled with this mod, but rather cross-referenced, and is now a required dependency.
---------------------------------------------------------------------------------------------------
Version: 1.7.0
Date: 11. 3. 2019
  Changes:
    - Updated for Factorio 0.17 (thanks emperorjimmy!)
    - Updated Russian translation (courtesy of badway)
    - Show Admin Panel is no longer checked by default.
    - Show Cheat Menu moved to a Mod Setting rather than a checkbox option in top dialog. Disabled by default, this should reduce the visibility of the cheats significantly, as they were a bit too readily accessible before.
    - Added a new checkbox in the top dialog to toggle Auto-Targeting. This is exactly the same function as the Mod Setting, just more easily accessible. As with the Mod Setting, only Admins (or single-player, of course) can access this toggle. Toggling this setting takes priority over the Mod Setting.
---------------------------------------------------------------------------------------------------
Version: 1.6.3
Date: 24. 2. 2018
  Minor Features:
    - Ion cannon strikes now show up on the minimap akin to vanilla artillery strikes.
  Changes:
    - Added an icon to the "Number of times an ion cannon was fired" entry in the Kills graph.
    - Switch to new "on_nth_tick" event, rather than on_tick.
  Bugfixes:
    - Fixed "Select Target" announcement being played much more often than intended if using a "Long Reach"-style mod.
---------------------------------------------------------------------------------------------------
Version: 1.6.2
Date: 19. 1. 2018
  Changes:
    - Added a Cheat Menu accessible in singleplayer or for admins in multiplayer that allows you to cheat ion cannons into orbit. The Cheat Menu selections can be found beneath the Admin Panel.