@@ -26,8 +26,12 @@ allowed=Allowed
 toggle-all=Toggle All
 ion-permission-denied=Error: You have been blocked from targeting ion cannons by an admin.
 
+ion-cannon-removed=Ion Cannon removed.
+no-ion-cannons=Error: No ion cannons in orbit.
+
 ion-cannon-cheat-one=Cheat: Launch one Ion Cannon
 ion-cannon-cheat-five=Cheat: Launch five Ion Cannons
+ion-cannon-remove-one=Cheat: Remove one Ion Cannon
 
 [item-name]
 orbital-ion-cannon=Orbital Ion Cannon
