@@ -3,6 +3,7 @@ Version: 1.7.1
 Date: 1X. 3. 2019
   Changes:
     - Factorio Standard Library is no longer directly bundled with this mod, but rather cross-referenced, and is now a required dependency.
+    - Added the ability to remove ion cannons via cheat.
 ---------------------------------------------------------------------------------------------------
 Version: 1.7.0
 Date: 11. 3. 2019
